[gd_scene load_steps=3 format=3 uid="uid://5cd0615q4al1"]

[ext_resource type="Script" path="res://TestBS/DustinTest/Scripts/Title_Screen.gd" id="1_l72fx"]

[sub_resource type="LabelSettings" id="LabelSettings_np4vy"]
font_size = 50

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_l72fx")

[node name="Play" type="Button" parent="."]
offset_left = 408.0
offset_top = 400.0
offset_right = 744.0
offset_bottom = 448.0
text = "Play"

[node name="LevelSelect" type="Button" parent="."]
offset_left = 408.0
offset_top = 464.0
offset_right = 744.0
offset_bottom = 512.0
text = "Level Select"

[node name="Quit" type="Button" parent="."]
offset_left = 408.0
offset_top = 528.0
offset_right = 744.0
offset_bottom = 576.0
text = "Quit"

[node name="Label" type="Label" parent="."]
offset_left = 320.0
offset_top = 16.0
offset_right = 832.0
offset_bottom = 152.0
text = "Twisted Dreams"
label_settings = SubResource("LabelSettings_np4vy")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
